<resources>
    <string name="app_name">Lab03-04</string>
    <string name="username1">Username:</string>
    <string name="password1">Password:</string>
    <string name="login1">Login</string>
    <string name="profName">Name:</string>
    <string name="profNameString">cool.dude47@cooldudes.com</string>
    <string name="buttonReturn1">Log Out</string>
    <string name="zipCode">Zip Code:</string>
    <string name="zipCodeVal">98765</string>
    <string name="phoneNumLabel">Phone Number:</string>
    <string name="phoneNumVal">982-129-1283</string>
    <string name="profTitle1">PROFILE</string>
    <string name="createbutton">Create Account</string>
    <string name="Email">"Email: "</string>
    <string name="nameLabel2">Name:</string>
    <string name="register1">REGISTER</string>
    <string name="accregister">Account Registration</string>
    <string name="Label">Please fill out the following:</string>
    <string name="Username">Username:</string>
    <string name="Password">Password:</string>
    <string name="Emaillabel">Email:</string>
    <string name="registernameLabel">Name:</string>
    <string name="namelabel">Name:</string>
    <string name="emaillabel">Email:</string>
    <string name="profNameLabel" />
    <string name="ageLabel">Age</string>
    <string name="nameLabel">Name</string>
    <string name="weightLabel">Weight</string>
    <string name="goalLabel2">Label</string>
    <string name="workoutsLabel">Workouts Completed</string>
    <string name="goalLabel">Goal</string>
    <string name="heightFtLabel">Height (Ft.)</string>
    <string name="heightInLabel">Height (In.)</string>
    <string name="bdayLabel">Birthdate (MM/DD/YYYY)</string>
    <string name="testText">This is a test</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">LOGIN</string>
    <string name="profTitle">PROFILE</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="buttonReturn">Log Out</string>
    <string name="greetings">Welcome to Workout App!</string>
    <string name="instructions">To begin, create a profile below</string>
    <string name="name1">Name</string>
    <string name="weight">Weight</string>
    <string name="goal">Goal</string>
    <string name="dateOfBirth">Birthday</string>
    <string name="Weight">999</string>
    <string name="height">Height (Ft.)</string>
    <string name="Height">Height (In.)</string>
    <string name="register">REGISTER</string>
    <string name="profileTitle">Profile</string>
    <string name="nav_to_profile">Profile</string>
    <string name="nav_to_create_workout">Add Workout</string>
    <string name="historyTitle">History</string>
    <string name="historyReturnButton">Profile</string>
    <string name="prevEntry">Previous</string>
    <string name="nextEntry">Next</string>
    <string name="histName">Workout:</string>
    <string name="histNameDisplay" />
    <string name="histType">Type:</string>
    <string name="histTypeDisplay" />
    <string name="histWeight">Weight:</string>
    <string name="histSets">Sets:</string>
    <string name="histReps">Reps:</string>


</resources>