<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name1"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/register_nameinput"
        app:layout_constraintStart_toStartOf="@+id/register_password" />

    <EditText
        android:id="@+id/register_nameinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/register_passinput"
        app:layout_constraintTop_toBottomOf="@+id/register_passinput" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/register_weightinput"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <EditText
        android:id="@+id/register_weightinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/register_nameinput"
        app:layout_constraintTop_toBottomOf="@+id/register_nameinput" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/register_goalinput"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateOfBirth"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/register_birthdayinput"
        app:layout_constraintStart_toStartOf="@+id/textView3" />

    <EditText
        android:id="@+id/register_birthdayinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/register_goalinput"
        app:layout_constraintTop_toBottomOf="@+id/register_goalinput" />

    <TextView
        android:id="@+id/TextInput1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/greetings"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
        <!--app:textInputLayoutFocusedRectEnabled="false" - This was preventing compilation-->

<EditText
    android:id="@+id/register_goalinput"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:ems="10"
    android:inputType="text"
    android:textColor="@color/black"
    app:layout_constraintStart_toStartOf="@+id/register_weightinput"
    app:layout_constraintTop_toBottomOf="@+id/register_weightinput" />

<Button
    android:id="@+id/button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Create"
    android:textAlignment="center"
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.976" />

<TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/height"
    android:textAlignment="viewStart"
    android:textColor="@color/black"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="@+id/register_heightfeetinput"
    app:layout_constraintStart_toStartOf="@+id/textView4" />

<TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Height"
    android:textAlignment="viewStart"
    android:textColor="@color/black"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="@+id/register_heightininput"
    app:layout_constraintStart_toStartOf="@+id/textView5" />

<EditText
    android:id="@+id/register_heightfeetinput"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:ems="10"
    android:inputType="text"
    android:textColor="@color/black"
    app:layout_constraintStart_toStartOf="@+id/register_birthdayinput"
    app:layout_constraintTop_toBottomOf="@+id/register_birthdayinput" />

<EditText
    android:id="@+id/register_heightininput"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:ems="10"
    android:inputType="text"
    android:textColor="@color/black"
    app:layout_constraintStart_toStartOf="@+id/register_heightfeetinput"
    app:layout_constraintTop_toBottomOf="@+id/register_heightfeetinput" />

<TextView
    android:id="@+id/textView7"
    android:layout_width="389dp"
    android:layout_height="49dp"
    android:layout_marginTop="20dp"
    android:text="@string/instructions"
    android:textAlignment="center"
    android:textColor="@color/black"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/TextInput1" />

<TextView
    android:id="@+id/register_username"
    android:layout_width="85dp"
    android:layout_height="22dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="52dp"
    android:text="@string/username"
    android:textAlignment="viewStart"
    android:textColor="@color/black"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="@+id/register_unameinput"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView7"
    app:layout_constraintVertical_bias="0.0" />

<TextView
    android:id="@+id/register_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/password"
    android:textAlignment="viewStart"
    android:textColor="@color/black"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="@+id/register_passinput"
    app:layout_constraintStart_toStartOf="@+id/register_username" />

<EditText
    android:id="@+id/register_unameinput"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginTop="36dp"
    android:ems="10"
    android:inputType="text"
    app:layout_constraintStart_toEndOf="@+id/register_username"
    app:layout_constraintTop_toBottomOf="@+id/textView7" />

<EditText
    android:id="@+id/register_passinput"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:ems="10"
    android:inputType="text"
    app:layout_constraintStart_toStartOf="@+id/register_unameinput"
    app:layout_constraintTop_toBottomOf="@+id/register_unameinput" />

</androidx.constraintlayout.widget.ConstraintLayout>